# Doom-Nukem

./: Makefile  README.md  auteur  callgrind.out.80875  doom-nukem  leaks.sh  meson.build  raycasting.c
doom-nukem.dSYM/Contents/Resources/DWARF/: doom-nukem
include/: delta_time.h  doom-nukem.h  doom_nukem.h  game_manager.h  mlx_macos_key.h
libft/: Makefile  a.out  auteur  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_istrim.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+30 more)
libft/a.out.dSYM/Contents/Resources/DWARF/: a.out
maps/: 1.tkt  3.tkt  4.tkt  5.tkt  boris.tkt  celeste.tkt  greg.tkt  laby.tkt  matrix.tkt  tim.tkt
minilibx/: _README_
src/: 3  3.  against_glitch.c  creator_map.c  delta_time.c  difficulty_hook.c  draw_3d.c  draw_3d2.c  draw_3d3.c  draw_line.c  draw_line2.c  font.c  game.c  hooks.c  img_to_img.c  init.c  init_menu_states.c  key_events.c  key_events2.c  main.c  map_creator.c  map_creator_draw.c  menu.c  minimap.c  minimap2.c  mouse_creator_map.c  mouse_event.c  movement.c  movements2.c  player_events.c  raycasting.c  raycasting2.c  raycasting3.c  save_map.c  settings_hook.c  skybox.c  sprite.c  sprite_events.c  take_object.c  textures.c  (+5 more)
textures/: Basic-0-Floor-32px.xpm  Basic-0-Floor.xpm  Basic-1.xpm  Basic-2.xpm  Basic-3.xpm  Basic-4.xpm  Basic-5-Yellow.xpm  Basic-6-Blue.xpm  Basquiat.xpm  Claude_Monet_soleil.xpm  Claude_Monet_soleil1.xpm  Dinosaur.xpm  Dinosaur_.xpm  EdvardMunch.xpm  Gandalf.xpm  La_liberte_guidant_le_peuple.xpm  MAP_CREATOR.xpm  Matrix.xpm  Mobil1.xpm  Mobil2.xpm  Mobil3.xpm  Mona_Lisa.xpm  Monet1.xpm  Monet2.xpm  Monet3.xpm  Plane.xpm  Plane_.xpm  Potatoe.xpm  Potatoe_.xpm  TRUMP1-2.xpm  TRUMP1.xpm  TRUMP2-2.xpm  TRUMP2.xpm  TRUMP3.xpm  TRUMP4.xpm  TRUMP5.xpm  TRUMP6.xpm  Theend.xpm  Tower.xpm  Tower_.xpm  (+115 more)
textures/menu/: DIFFICULTY-EASY.XPM  DIFFICULTY-HARD.XPM  DIFFICULTY-RETURN.XPM  DIFFICULTY.xpm  MENU.XPM  MENU_QUIT.XPM  MENU_SETTINGS.XPM  MENU_START.XPM  SETTINGS-SOUND_OFF-COLOR.XPM  SETTINGS-SOUND_OFF-DIFFICULTY.XPM  SETTINGS-SOUND_OFF-RETURN.XPM  SETTINGS-SOUND_OFF.XPM  SETTINGS-SOUND_ON-COLOR.XPM  SETTINGS-SOUND_ON-DIFF.XPM  SETTINGS-SOUND_ON-RETURN.XPM  SETTINGS-SOUND_ON.XPM
