project('doomnukem', 'c',
  version : '0.1',
  default_options : ['warning_level=3']
)
cc = meson.get_compiler('c')

ogl_dep = dependency('gl', required: true)
mlibx_dep = declare_dependency(
    link_args : '-lmlx',
)
x11_dep = dependency('x11', required: true)
xext_dep = dependency('xext', required: true)
m_dep = cc.find_library('m')
bsd_dep = dependency('libbsd', required: true)

doomnukem_sources = [
    'src/draw_3d.c',
    'src/draw_3d2.c',
    'src/minimap.c',
    'src/minimap2.c',
    'src/hooks.c',
    'src/draw_line.c',
    'src/draw_line2.c',
    'src/main.c',
    'src/movement.c',
    'src/movements2.c',
    'src/raycasting.c',
    'src/raycasting2.c',
    'src/save_map.c',
    'src/sprite.c',
    'src/textures.c',
    'src/delta_time.c',
    'src/key_events.c',
    'src/key_events2.c',
    'src/mouse_event.c',
    'src/weapon.c',
    'src/trump.c',
    'src/init.c',
    'src/game.c',
    'src/player_events.c',
    'src/sprite_events.c',
    'src/creator_map.c',
    'src/img_to_img.c',
    'src/textures2.c',
    'src/menu.c',
    'src/settings_hook.c',
    'src/difficulty_hook.c',
    'src/mouse_creator_map.c',
    'src/take_object.c',
    'src/against_glitch.c',
    'src/weapon2.c',
    'src/weapon3.c',
    'src/skybox.c',
    'libft/ft_atoi.c',
    'libft/ft_bzero.c',
    'libft/ft_isalnum.c',
    'libft/ft_isalpha.c',
    'libft/ft_isascii.c',
    'libft/ft_isdigit.c',
    'libft/ft_isprint.c',
    'libft/ft_itoa.c',
    'libft/ft_memalloc.c',
    'libft/ft_memccpy.c',
    'libft/ft_memchr.c',
    'libft/ft_memcmp.c',
    'libft/ft_memcpy.c',
    'libft/ft_memdel.c',
    'libft/ft_memmove.c',
    'libft/ft_memset.c',
    'libft/ft_putchar.c',
    'libft/ft_putchar_fd.c',
    'libft/ft_putendl.c',
    'libft/ft_putendl_fd.c',
    'libft/ft_putnbr.c',
    'libft/ft_putnbr_fd.c',
    'libft/ft_putstr.c',
    'libft/ft_putstr_fd.c',
    'libft/ft_strcat.c',
    'libft/ft_strchr.c',
    'libft/ft_strclr.c',
    'libft/ft_strcmp.c',
    'libft/ft_strcpy.c',
    'libft/ft_strdel.c',
    'libft/ft_strdup.c',
    'libft/ft_strequ.c',
    'libft/ft_striter.c',
    'libft/ft_striteri.c',
    'libft/ft_strjoin.c',
    'libft/ft_strlen.c',
    'libft/ft_strmap.c',
    'libft/ft_strmapi.c',
    'libft/ft_strncat.c',
    'libft/ft_strncmp.c',
    'libft/ft_strncpy.c',
    'libft/ft_strnequ.c',
    'libft/ft_strnew.c',
    'libft/ft_strnstr.c',
    'libft/ft_strrchr.c',
    'libft/ft_strstr.c',
    'libft/ft_strsub.c',
    'libft/ft_strtrim.c',
    'libft/ft_tolower.c',
    'libft/ft_toupper.c',
    'libft/ft_strsplit.c',
    'libft/ft_strlcat.c',
    'libft/ft_lstadd.c',
    'libft/ft_lstnew.c',
    'libft/ft_lstdel.c',
    'libft/ft_lstdelone.c',
    'libft/ft_lstiter.c',
    'libft/ft_lstmap.c',
    'libft/ft_strrev.c',
    'libft/ft_strtolower.c',
    'libft/ft_strtoupper.c',
    'libft/ft_istrim.c',
    'libft/ft_isspace.c',
    'libft/ft_strndup.c',
    'libft/get_next_line.c',
]

all_inc = include_directories(
    'include'
)

exe = executable(
    'doomnukem',
    doomnukem_sources,
    include_directories: all_inc,
    dependencies: [
        ogl_dep,
        mlibx_dep,
        x11_dep,
        xext_dep,
        m_dep,
        bsd_dep,
    ],
    install : true)
